--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.11.5",
+    "@aws-amplify/core": "^6.10.4",
+    "@aws-amplify/ui-react": "^6.9.3",
+    "@aws-sdk/client-dynamodb": "^3.758.0",
+    "@aws-sdk/lib-dynamodb": "^3.758.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -37,7 +42,10 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "amazon-cognito-identity-js": "^6.3.12",
     "autoprefixer": "^10.4.20",
+    "aws-amplify": "^6.13.5",
+    "aws-sdk": "^2.1692.0",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,11 +56,13 @@
     "lucide-react": "^0.454.0",
     "next": "^14.2.16",
     "next-themes": "^0.4.4",
+    "oidc-client-ts": "^3.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-oidc-context": "^3.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
